<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EventFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <Button
                android:id="@+id/add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.47"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="Button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/add_button"
                app:layout_constraintHorizontal_bias="0.578"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/logout_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="Logout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/add_button" />

            <ScrollView
                android:id="@+id/scrollView2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/add_button"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageViewEvent1"
                        android:layout_width="match_parent"
                        android:layout_height="215dp"
                        android:contentDescription="@string/FoodDonationCharityEvent"
                        android:src="@drawable/pic1" />

                    <TextView
                        android:id="@+id/textViewEvent1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Event1" />

                    <ImageView
                        android:id="@+id/imageViewPromotion1"
                        android:layout_width="match_parent"
                        android:layout_height="333dp"
                        android:contentDescription="@string/PenangAsianFoodandCultureFestival"
                        android:src="@drawable/pic3" />

                    <TextView
                        android:id="@+id/textViewEvent2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Event2" />

                    <ImageView
                        android:id="@+id/imageViewEvent2"
                        android:layout_width="match_parent"
                        android:layout_height="232dp"
                        android:contentDescription="@string/WeekendGuinnessbyFireFestival"
                        android:src="@drawable/pic2" />

                    <TextView
                        android:id="@+id/textViewPromotion1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Promotion1" />

                    <ImageView
                        android:id="@+id/imageViewPromotion2"
                        android:layout_width="wrap_content"
                        android:layout_height="313dp"
                        android:contentDescription="@string/KasbahBBQParty"
                        android:src="@drawable/pic4" />

                    <TextView
                        android:id="@+id/textViewPromotion2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Promotion2" />
                </LinearLayout>
            </ScrollView>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>
</layout>